2010-09-20  Peter Varga  <pvarga@inf.u-szeged.hu>

        Reviewed by Geoffrey Garen.

        REGRESSION(67790): jsc tests are failed with YARR interpreter
        https://bugs.webkit.org/show_bug.cgi?id=46083

        Fix the initializing of the lastSubpatternId member of
        parentheses.

        * yarr/RegexCompiler.cpp:
        (JSC::Yarr::RegexPatternConstructor::atomParenthesesEnd):

2010-09-20  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Oliver Hunt.

        Bug 46077 - ASSERT failure in YARR JIT

        We will currently attempt to loop if there are multiple alternatives, they are all
        BOL predicated, and the last alternative is longer then the first - however if all
        alternatives are BOL predicated the head of loop label will not have been set, and
        we'll try to link a jump to an undefined label. Stop doing so.

        * yarr/RegexJIT.cpp:
        (JSC::Yarr::RegexGenerator::generateDisjunction):

2010-09-20  Adam Roben  <aroben@apple.com>

        Export RegExpObject::info from JavaScriptCore

        This allows obj->inherits(&RegExpObject::info) to work correctly from
        outside JavaScriptCore.dll on Windows.

        Fixes <http://webkit.org/b/46098>
        fast/loader/stateobjects/pushstate-object-types.html fails on Windows

        Reviewed by John Sullivan.

        * runtime/RegExpObject.h: Added JS_EXPORTDATA to the info member, as
        we already have for some other classes whose info members have to be
        used from outside the DLL.

2010-09-19  Gavin Barraclough  <barraclough@apple.com>

        Windows build fix pt 2.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:

2010-09-19  Gavin Barraclough  <barraclough@apple.com>

        Windows build fix pt 1.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:

2010-09-19  Gavin Barraclough  <barraclough@apple.com>

        Build fix - implicit double-to-int conversion invalid on 32-bit.
